# SPServer

./: CMakeLists.txt  package.xml
include/: setpoint_server.h
launch/: setpoint.launch
src/: main.cpp  setpoint_server.cpp
srv/: SetPoint.srv
